--- a/index.html
+++ b/index.html
@@ -205,7 +205,10 @@
                 <img src="bna_ran-2.jpg" alt="Hình ảnh rắn mùa xuân" title="Biểu tượng con rắn tại thành phố Trà Vinh">
             </div>
         </section>
-
+        <section id="videotintuc" >
+            <h2>Trà Vinh chuẩn bị đầy đủ phục vụ Tết Ất Tỵ 2025</h2>
+            <video style="margin:0px 5%; width: 90%; height: auto;" src="Trà Vinh chuẩn bị đầy đủ hàng hóa phục vụ Tết Ất Tỵ 2025.mp4" controls></video>
+        </section>
         <section id="customs">
             <h2>Phong Tục Tết</h2>
             <p>Tết Nguyên Đán không chỉ là dịp để sum họp mà còn là thời điểm để thực hiện những phong tục truyền thống. Một số phong tục tiêu biểu gồm:</p>
